[package]
name = "postman-gen"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0.109", features = ["full", "extra-traits"] }
quote = "1.0.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = "1.48.0"
dotenv = "0.15.0"
